[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["berto <berto.ort@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.32"
fixedbitset = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
